# gmwwise

./: .gitignore  GMWwise Manual.docx  GMWwise.sln  ProjectHome.md  README.md  UpgradeLog.XML  UpgradeLog.htm  UpgradeLog2.XML  UpgradeLog2.htm  VisualStudio.gitignore
Backup1/: GMWwise.sln
Files/: GMWwise (GMS 1.4).gmez  GMWwise.gmez  GMWwise.gml  README.txt
GMWwise/: GMWBank.cpp  GMWBank.h  GMWConfig.h  GMWEngine.cpp  GMWEngine.h  GMWGameObject.cpp  GMWGameObject.h  GMWListener.cpp  GMWListener.h  GMWMicro.cpp  GMWMicro.h  GMWStringUtil.cpp  GMWwise.vcproj  GMWwise.vcxproj
GMWwise/wwise/: AkDefaultIOHookBlocking.cpp  AkDefaultIOHookBlocking.h  AkDefaultLowLevelIODispatcher.cpp  AkFileHelpers.h  AkFileLocationBase.cpp  AkFileLocationBase.h  AkFilePackage.cpp  AkFilePackage.h  AkFilePackageLUT.cpp  AkFilePackageLUT.h  AkFilePackageLowLevelIO.h  AkFilePackageLowLevelIO.inl  AkFilePackageLowLevelIOBlocking.h  SoundInput.cpp  SoundInputMgr.cpp  SoundInputMgrBase.cpp
Sample Project/GMWWise Simple/Attenuations/: Default Work Unit.wwu
Sample Project/GMWWise Simple/Control Surface Sessions/: Default Work Unit.wwu
Sample Project/GMWWise Simple/Game Parameters/: Default Work Unit.wwu
Sample Project/GMWWise Simple/GeneratedSoundBanks/: Wwise_IDs.h
Sample Project/GMWWise Simple/Originals/: WavAnalysis.cache
Sample Project/GMWWise Simple/Triggers/: Default Work Unit.wwu
Sample Project/GMWWiseSample/: GMWWiseSample.yyp
Sample Project/GMWWiseSample.gmx/: GMWWiseSample.project.gmx  help.rtf
Sample Project/GMWWiseSample.gmx/Configs/: Default.config.gmx
Sample Project/GMWWiseSample.gmx/extensions/: GMWwise.extension.gmx
Sample Project/GMWWiseSample.gmx/objects/: objBall.object.gmx  objHUD.object.gmx  objSoundController.object.gmx  objWall.object.gmx
Sample Project/GMWWiseSample.gmx/rooms/: rmGame.room.gmx
Sample Project/GMWWiseSample.gmx/scripts/: gmwGetParameter.gml  gmwInit.gml  gmwLoad.gml  gmwLoadBank.gml  gmwPostEvent.gml  gmwPostTrigger.gml  gmwProcess.gml  gmwRegisterCodec.gml  gmwRegisterGroup.gml  gmwRegisterObject.gml  gmwRegisterPlugin.gml  gmwSet2DListenerPosition.gml  gmwSet2DPosition.gml  gmwSet3DListenerPosition.gml  gmwSet3DPosition.gml  gmwSetActiveListeners.gml  gmwSetBasePath.gml  gmwSetGlobalParameter.gml  gmwSetLanguageDirName.gml  gmwSetParameter.gml  gmwSetState.gml  gmwSetSwitch.gml  gmwStop.gml  gmwStopAll.gml  gmwUnload.gml  gmwUnloadBank.gml  gmwUnregisterGroup.gml  gmwUnregisterObject.gml
Sample Project/GMWWiseSample.gmx/sprites/: sprBall.sprite.gmx  sprWall.sprite.gmx
Sample Project/GMWWiseSample/notes/: notes.yy
Sample Project/GMWWiseSample/views/: 08d57963-a333-4eb1-845d-4489d98da4ab.yy  12e3ef9b-b39c-4d71-b416-37226a8969e9.yy  1ef2d699-ba74-4830-a83d-826328df0bc6.yy  22f1e24a-4683-4e8b-b1dc-bcda3e221eee.yy  23380964-7633-4bbb-8fce-24d9147e613a.yy  23742f67-65c0-45c0-bd00-23cefd9752f7.yy  2747376a-a1cd-4826-a827-c400b26c4945.yy  33792f02-0044-4ccf-a9da-29311b9e203a.yy  486e452b-32ec-42f3-bf13-56d76a2aa419.yy  5641b4ee-07be-4164-ba63-ba831dfee2f7.yy  6a10238a-69f8-44c6-8d31-8433fd04fb74.yy  7b5beaed-f51d-4a53-bdec-bb23fcb92ef8.yy  7eb6108d-4013-4c86-9c88-f9089576f95e.yy  a9e680aa-546f-40ed-837a-8a0fbd1e8820.yy  d03ba54d-f6b4-4159-95dc-9755dc256de9.yy  d760b6ad-b6b5-4cb2-88a3-c6944833c4a3.yy  dc76bd3f-770c-4bb6-b939-8d1ea9eaa34c.yy  ed4a01f2-024a-42b5-959e-decaeba5c2a0.yy  f2ec67d3-bb67-4e30-84a3-19846b507627.yy  f894fb7b-4119-4883-becc-703612e85253.yy
Sample Project/Sample Wwise Project/GMWWise Simple/: GMWWise Simple.Chris.validationcache  GMWWise Simple.Chris.wsettings  GMWWise Simple.wproj  IncrementalSoundBankData.xml
Source/: GMWwise.sdf  GMWwise.sln
Source (Mac)/GMWwise/: GMWAlert.h  GMWAlert.mm  GMWBank.h  GMWBank.mm  GMWConfig.h  GMWEngine.h  GMWEngine.mm  GMWGameObject.h  GMWGameObject.mm  GMWListener.h  GMWListener.mm  GMWMicro.h  GMWStringUtil.h  test.cpp  test.hpp
Source (Mac)/GMWwise/GMWwise.xcodeproj/: project.pbxproj
Source (Mac)/GMWwise/wwise/: AkDefaultIOHookBlocking.cpp  AkDefaultIOHookDeferred.cpp  AkDefaultIOHookDeferred.h  AkDefaultLowLevelIODispatcher.cpp  AkDefaultLowLevelIODispatcher.h  AkFileHelpers.h  AkFileLocationBase.cpp  AkFileLocationBase.h  AkFilePackage.cpp  AkFilePackage.h  AkFilePackageLUT.cpp  AkFilePackageLUT.h  AkFilePackageLowLevelIO.h  AkFilePackageLowLevelIO.inl  AkFilePackageLowLevelIODeferred.h  AkMultipleFileLocation.h  AkMultipleFileLocation.inl  AkStreamMgrModule.h
Source/GMWwise/: GMWBank.cpp  GMWBank.h  GMWConfig.h  GMWEngine.cpp  GMWEngine.h  GMWGameObject.cpp  GMWGameObject.h  GMWListener.cpp  GMWListener.h  GMWStringUtil.cpp  GMWwise.vcxproj  GMWwise.vcxproj.filters
Source/GMWwise/wwise/: AkDefaultIOHookBlocking.cpp  AkDefaultIOHookBlocking.h  AkDefaultIOHookDeferred.cpp  AkDefaultIOHookDeferred.h  AkDefaultLowLevelIODispatcher.h  AkFileHelpers.h  AkFileLocationBase.cpp  AkFileLocationBase.h  AkFilePackage.cpp  AkFilePackageLUT.cpp  AkMultipleFileLocation.h  AkMultipleFileLocation.inl
Source/Linux/: CMakeLists.txt  library.h
Source/Mac/GMWwise/: GMWAlert.mm  GMWBank.h  GMWConfig.h  GMWEngine.h  GMWEngine.mm  GMWGameObject.h  GMWGameObject.mm
Source/Shared/: GMWBank.cpp  GMWBank.h  GMWConfig.cpp  GMWConfig.h  GMWEngine.cpp  GMWEngine.h  GMWGameObject.cpp  GMWGameObject.h  GMWListener.cpp  GMWListener.h  GMWStringUtil.cpp
Source/Windows/: GMWwise.sln
Source/Windows/GMWwise/: GMWConfig.h  GMWEngine.cpp  GMWEngine.h  GMWGameObject.cpp  GMWListener.cpp  GMWListener.h  GMWMicro.cpp  GMWStringUtil.h  GMWwise.vcproj  GMWwise.vcxproj  GMWwise.vcxproj.filters
sample/: GMWwise.gml
sample/GM Tutorial - First Game/Example/: Catch_the_Clown.gb1
tags/1.2/GMWwise/: GMWBank.h  GMWConfig.h  GMWEngine.cpp  GMWEngine.h  GMWGameObject.cpp  GMWGameObject.h  GMWListener.cpp  GMWListener.h  GMWStringUtil.h  GMWwise.vcproj
trunk/: GMWwise.sln
trunk/GMWwise/: GMWBank.cpp  GMWBank.h  GMWConfig.h  GMWEngine.cpp  GMWEngine.h  GMWGameObject.cpp  GMWGameObject.h  GMWListener.cpp  GMWListener.h  GMWStringUtil.cpp  GMWStringUtil.h  GMWwise.vcproj
trunk/sample/: GMWwise.gml
(+177 files in other folders)
